# wfc

./: .gitignore  Makefile  pyproject.toml
docs/: PROGRESS.md  README.md
src/wfc/: __main__.py  board.py  cli.py  constraints.py  generator.py  parser.py
tests/: test_board.py  test_cli.py  test_constraints.py  test_generator.py  test_smoke.py
